mascaras no cpf e phone

--- a/ubs/accounts/templates/users/doctor/add.html
+++ b/ubs/accounts/templates/users/doctor/add.html
@@ -69,5 +69,20 @@
 {% endblock %}
 
 {% block js %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://rawgit.com/RobinHerbots/jquery.inputmask/3.x/dist/jquery.inputmask.bundle.js"></script>
+    <script>
+
+        $(function(){
+            $("#id_cpf").inputmask({
+                mask: "999.999.999-99"
+            });
+            $("#id_phone").inputmask({
+                mask: "(99) 9 9999-9999 "
+            });
+            
+            $("#frmNumero").inputmask();
+        });
+    </script>
 
 {% endblock %}
