--- a/ubs/core/templates/core/menu_admin.html
+++ b/ubs/core/templates/core/menu_admin.html
@@ -1,73 +1,91 @@
 <div id="main-menu" class="main-menu collapse navbar-collapse">
     <ul class="nav navbar-nav">
-        <li class="active">
-            <a href=""> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
-        </li>
-        <h3 class="menu-title">Pacientes</h3><!-- /.menu-title -->
+
+
+
+        <h3 class="menu-title text-center">UBS-Em Saúde<del></del></h3><!-- /.menu-title -->
         <li class="menu-item-has-children dropdown">
-            <a href=" {% url 'patient:list_patient' %}" class="dropdown-toggle" aria-haspopup="true"
-                aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Pacientes</a>
-        </li>
-        <li class="menu-item-has-children active dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Outros</a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+                <i
+                    class="menu-icon fa fa-user-circle"></i>Usuários</a>
             <ul class="sub-menu children dropdown-menu">
-                <li class="menu-item-has-children dropdown">
-                    <i class="menu-icon fa fa-th-list"></i><a href=" {% url 'patient:list_city' %}" class="dropdown-toggle" aria-haspopup="true"> Cidades</a>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <i class="menu-icon fa fa-th-list"></i><a href=" {% url 'patient:list_state' %}" class="dropdown-toggle" aria-haspopup="true"
-                        aria-expanded="false"> Estados</a>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <i class="menu-icon fa fa-th-list"></i><a href=" {% url 'patient:list_medical_insurance' %}" class="dropdown-toggle" aria-haspopup="true"
-                        aria-expanded="false"> Convênios</a>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <i class="menu-icon fa fa-th-list"></i><a href=" {% url 'patient:list_color' %}" class="dropdown-toggle" aria-haspopup="true"
-                        aria-expanded="false"> Cores</a>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <i class="menu-icon fa fa-th-list"></i><a href=" {% url 'patient:list_marital_state' %}" class="dropdown-toggle" aria-haspopup="true"
-                        aria-expanded="false"> Estado Conjugal</a>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <i class="menu-icon fa fa-th-list"></i><a href=" {% url 'patient:list_logradouro' %}" class="dropdown-toggle" aria-haspopup="true"
-                        aria-expanded="false"> Logradouro</a>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <i class="menu-icon fa fa-th-list"></i><a href=" {% url 'patient:list_ocupation' %}" class="dropdown-toggle" aria-haspopup="true"
-                        aria-expanded="false"> Ocupação</a>
+                <li><i class="fa fa-user-md"></i><a href="{% url 'accounts:list_all_doctor' %}"> Médicos</a></li>
+                <li><i class="fa fa-user-o"></i><a href="{% url 'accounts:list_all_clerk' %}"> Técnicos</a></li>
+
+            </ul>
+        </li>
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-address-card"></i>Pacientes</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'patient:add_patient' %}">Adicionar Paciente</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'patient:list_patient' %}">Ver Pacientes</a></li>
+        
+            </ul>
+        </li>
+
+
+        
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-exclamation-triangle"></i>CID10</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_CID' %}">Novo CID10</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_CID' %}">Ver CIDs10</a></li>       
+            </ul>
+        </li>
+
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-medkit"></i>Medicamentos</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_medicine' %}">Novo Medicamento</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_medicine' %}">Ver Medicamentos</a></li>
+            </ul>
+        </li>
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-stethoscope"></i>Exames</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_exam_request' %}">Novo Exame</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_exam_request' %}">Ver Exames</a></li>
+            </ul>
+        </li>
+
+
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-exclamation-triangle"></i>CID10</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_CID' %}">Novo CID10</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_CID' %}">Ver CIDs10</a></li>
+            </ul>
+        </li>
+
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-medkit"></i>Medicamentos</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_medicine' %}">Novo Medicamento</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_medicine' %}">Ver Medicamentos</a>
                 </li>
             </ul>
         </li>
-        <h3 class="menu-title">Consultas</h3><!-- /.menu-title -->
 
         <li class="menu-item-has-children dropdown">
-            <a href=" {% url 'medical_query:list_CID' %}" class="dropdown-toggle" aria-haspopup="true"> <i
-                    class="menu-icon fa fa-tasks"></i>CID10</a>
-        </li>
-        <li class="menu-item-has-children dropdown">
-            <a href=" {% url 'medical_query:list_medicine' %}" class="dropdown-toggle" aria-haspopup="true"> <i
-                    class="menu-icon fa fa-tasks"></i>Medicamento</a>
-        </li>
-        <li class="menu-item-has-children dropdown">
-            <a href=" {% url 'medical_query:list_exam_request' %}" class="dropdown-toggle" aria-haspopup="true"> <i
-                    class="menu-icon fa fa-tasks"></i>Requisição de Exame</a>
-        </li>
-        <h3 class="menu-title">Exames Físico</h3><!-- /.menu-title -->
-        <li class="menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
-                    class="menu-icon fa fa-glass"></i>Pages</a>
+                    class="menu-icon fa fa-stethoscope"></i>Exames</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_exam_request' %}">Novo Exame</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_exam_request' %}">Ver Exames</a>
+                </li>
+            </ul>
         </li>
-        <h3 class="menu-title">Usuários</h3><!-- /.menu-title -->
-        <li class="menu-item-has-children dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
-                    class="menu-icon fa fa-glass"></i>Pages</a>
-        </li>
-        <h3 class="menu-title">Relatórios</h3><!-- /.menu-title -->
-        <li class="menu-item-has-children dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
-                    class="menu-icon fa fa-glass"></i>Pages</a>
-        </li>
+
     </ul>
 </div>
