--- a/ubs/core/templates/core/dashboard_medical.html
+++ b/ubs/core/templates/core/dashboard_medical.html
@@ -1,6 +1,7 @@
 <div class="col-sm-12">
     <div class="alert  alert-success alert-dismissible fade show" role="alert">
-        <span class="badge badge-pill badge-success">Bem Vindo(a)</span> {{request.user}} seu login foi efetuado com sucesso, a partir de agora você pode utilizar todos os recursos do nível <strong>TÉCNICO</strong>.
+        <span class="badge badge-pill badge-success">Bem Vindo(a)</span> {{request.user}} seu login foi efetuado com
+        sucesso, a partir de agora você pode utilizar todos os recursos do nível <strong>MÉDICO(A)</strong>.
     </div>
 </div>
 
@@ -8,7 +9,8 @@
     <div class="card text-white bg-flat-color-1">
         <div class="card-body pb-0">
             <div class="dropdown float-right">
-                <button class="btn bg-transparent dropdown-toggle theme-toggle text-light" type="button" id="dropdownMenuButton1" data-toggle="dropdown">
+                <button class="btn bg-transparent dropdown-toggle theme-toggle text-light" type="button"
+                    id="dropdownMenuButton1" data-toggle="dropdown">
                     <i class="fa fa-cog"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -18,14 +20,14 @@
                     </div>
                 </div>
             </div>
-       
+
             <h4 class="mb-0">
-                <span class="count">{{patients_count}}</span>
+                <span class="count">10468</span>
             </h4>
             <p class="text-light">Pacientes</p>
 
             <div class="chart-wrapper px-0" style="height:70px; text-align: right;" height="70">
-               <i class="menu-icon fa fa-address-card" style="font-size: 43px;"></i>
+                <i class="menu-icon fa fa-address-card" style="font-size: 43px;"></i>
             </div>
 
         </div>
@@ -37,9 +39,21 @@
 <div class="col-sm-6 col-lg-3">
     <div class="card text-white bg-flat-color-2">
         <div class="card-body pb-0">
-
+            {% if request.user.is_medical %}
+            <div class="dropdown float-right">
+                <button class="btn bg-transparent dropdown-toggle theme-toggle text-light" type="button"
+                    id="dropdownMenuButton2" data-toggle="dropdown">
+                    <i class="fa fa-cog"></i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                    <div class="dropdown-menu-content">
+                        <a class="dropdown-item" href="#">Ver todas</a>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
             <h4 class="mb-0">
-                <span class="count">{{querys_count}}</span>
+                <span class="count">10468</span>
             </h4>
             <p class="text-light">Consultas</p>
 
@@ -68,7 +82,7 @@
                 </div>
             </div>
             <h4 class="mb-0">
-                <span class="count">{{doctors_count}}</span>
+                <span class="count">10468</span>
             </h4>
             <p class="text-light">Medicos(as)</p>
 
@@ -97,7 +111,7 @@
                 </div>
             </div>
             <h4 class="mb-0">
-                <span class="count">{{clerks_count}}</span>
+                <span class="count">10468</span>
             </h4>
             <p class="text-light">Técnicos(as)</p>
 
