--- a/ubs/core/templates/core/menu_medical.html
+++ b/ubs/core/templates/core/menu_medical.html
@@ -1,7 +1,11 @@
 <div id="main-menu" class="main-menu collapse navbar-collapse">
     <ul class="nav navbar-nav">
 
-        <h3 class="menu-title text-center">UBS-Em Saúde<del></del></h3>
+        <a class="menu-title text-center" href="{% url 'core:index' %}"><h3 class="menu-title text-center">UBS-Em Saúde<del></del></h3></a>
+        <li>
+            <a href="{% url 'core:index' %}" > 
+                <i class="menu-icon fa fa-home"></i>Home</a>
+        </li>
         
         <li class="menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
