fix: links de exluir

--- a/ubs/accounts/templates/users/clerk/list.html
+++ b/ubs/accounts/templates/users/clerk/list.html
@@ -157,7 +157,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/accounts/admin/delete/" + id_user
+            urlDel = "./clerk/delete/" + id_user
 
             let xhr = new XMLHttpRequest()
 
