--- a/ubs/accounts/templates/users/doctor/list.html
+++ b/ubs/accounts/templates/users/doctor/list.html
@@ -158,7 +158,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/accounts/admin/delete/" + id_user
+            urlDel = "./doctor/delete/" + id_user
 
             let xhr = new XMLHttpRequest()
 
