--- a/ubs/patient/templates/marital_state/list.html
+++ b/ubs/patient/templates/marital_state/list.html
@@ -144,7 +144,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/paciente/delete-estado-conjugal/" + id_user
+            urlDel = "./delete-estado-conjugal/" + id_user
 
             let xhr = new XMLHttpRequest()
 
