--- a/ubs/patient/templates/ocupation/list.html
+++ b/ubs/patient/templates/ocupation/list.html
@@ -145,7 +145,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/paciente/delete-ocupacao/" + id_user
+            urlDel = "./delete-ocupacao/" + id_user
 
             let xhr = new XMLHttpRequest()
 
