--- a/ubs/patient/templates/state/list.html
+++ b/ubs/patient/templates/state/list.html
@@ -148,7 +148,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/paciente/delete-estado/" + id_user
+            urlDel = "./delete-estado/" + id_user
 
             let xhr = new XMLHttpRequest()
 
