--- a/ubs/specialty/templates/doctor_specialty/list.html
+++ b/ubs/specialty/templates/doctor_specialty/list.html
@@ -130,7 +130,7 @@
     }
     function remove_user() {
 
-        urlDel = "http://localhost:8000/specialty/delete/vinculo/" + id_user
+        urlDel = "./delete/vinculo/" + id_user
 
         let xhr = new XMLHttpRequest()
 
