--- a/ubs/specialty/templates/specialty/list.html
+++ b/ubs/specialty/templates/specialty/list.html
@@ -138,7 +138,7 @@
     }
     function remove_user() {
 
-        urlDel = "http://localhost:8000/specialty/delete/" + id_user
+        urlDel = "./specialty/delete/" + id_user
 
         let xhr = new XMLHttpRequest()
 
