--- a/ubs/patient/templates/logradouro/list.html
+++ b/ubs/patient/templates/logradouro/list.html
@@ -144,7 +144,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/paciente/delete-logradouro/" + id_user
+            urlDel = "./delete-logradouro/" + id_user
 
             let xhr = new XMLHttpRequest()
 
