--- a/ubs/patient/templates/patient/list.html
+++ b/ubs/patient/templates/patient/list.html
@@ -156,7 +156,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/paciente/delete-paciente/" + id_user
+            urlDel = "./delete-paciente/" + id_user
 
             let xhr = new XMLHttpRequest()
 
