--- a/ubs/accounts/templates/users/clerk/list.html
+++ b/ubs/accounts/templates/users/clerk/list.html
@@ -110,17 +110,17 @@
                                                 </button>
                                             </a>
 
-
-                                            <button type="button" class="btn btn-danger btn-sm"
-                                                id = "{{ object.id }}" 
-                                                name = "{{object.full_name}}"
-                                                data-toggle="modal" 
-                                                data-target="#staticModal"
-                                                onclick="get_datas(this.name,this.id)"
-                                                style="border-radius: 3px;">
-                                                <i class="fa fa-trash"></i>
-                                            </button>
-
+                                            {% if request.user.is_superuser %}
+                                                <button type="button" class="btn btn-danger btn-sm"
+                                                    id = "{{ object.id }}" 
+                                                    name = "{{object.full_name}}"
+                                                    data-toggle="modal" 
+                                                    data-target="#staticModal"
+                                                    onclick="get_datas(this.name,this.id)"
+                                                    style="border-radius: 3px;">
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+                                            {% endif %}
 
                                         </div>
                                     </td>
