--- a/ubs/medical_query/templates/forwarding/list.html
+++ b/ubs/medical_query/templates/forwarding/list.html
@@ -101,15 +101,15 @@
                                                 </button>
                                             </a>
 
+                                            {% if request.user.is_superuser %}
+                                                <button type="button" class="btn btn-danger btn-sm" id="{{ object.id }}"
+                                                    name="{{object.full_name}}" data-toggle="modal"
+                                                    data-target="#staticModal" onclick="get_datas(this.name,this.id)"
+                                                    style="border-radius: 3px;">
+                                                    <i class="fa fa-trash"></i>
 
-                                            <button type="button" class="btn btn-danger btn-sm" id="{{ object.id }}"
-                                                name="{{object.full_name}}" data-toggle="modal"
-                                                data-target="#staticModal" onclick="get_datas(this.name,this.id)"
-                                                style="border-radius: 3px;">
-                                                <i class="fa fa-trash"></i>
-
-                                            </button>
-
+                                                </button>
+                                            {% endif %}
 
                                         </div>
                                     </td>
