--- a/ubs/patient/templates/city/list.html
+++ b/ubs/patient/templates/city/list.html
@@ -105,19 +105,19 @@
                                                 </button>
                                             </a>
 
-
-                                            <a >
-                                                <button type="button" class="btn btn-danger btn-sm" 
-                                                    id = "{{ object.codIBGE }}" 
-                                                    name = "{{object.name_city}}"
-                                                    data-toggle="modal" 
-                                                    data-target="#staticModal"
-                                                    onclick="get_datas(this.name,this.id)"
-                                                    style="border-radius: 3px;">
-                                                    <i class="fa fa-trash"></i>
-                                                </button>
-                                            </a>
-
+                                            {% if request.user.is_superuser %}
+                                                <a >
+                                                    <button type="button" class="btn btn-danger btn-sm" 
+                                                        id = "{{ object.codIBGE }}" 
+                                                        name = "{{object.name_city}}"
+                                                        data-toggle="modal" 
+                                                        data-target="#staticModal"
+                                                        onclick="get_datas(this.name,this.id)"
+                                                        style="border-radius: 3px;">
+                                                        <i class="fa fa-trash"></i>
+                                                    </button>
+                                                </a>
+                                            {% endif %}
                                         </div>
                                     </td>
                                 </tr>
