--- a/ubs/specialty/templates/doctor_specialty/list.html
+++ b/ubs/specialty/templates/doctor_specialty/list.html
@@ -86,14 +86,14 @@
                                                 </button>
                                             </a>
 
-
-                                            <button type="button" class="btn btn-danger btn-sm" id="{{ object.id }}"
-                                                name="{{object.doctor}}" data-toggle="modal"
-                                                data-target="#staticModal" onclick="get_datas(this.name,this.id)"
-                                                style="border-radius: 3px;">
-                                                <i class="fa fa-trash"></i>
-                                            </button>
-
+                                            {% if request.user.is_superuser %}
+                                                <button type="button" class="btn btn-danger btn-sm" id="{{ object.id }}"
+                                                    name="{{object.doctor}}" data-toggle="modal"
+                                                    data-target="#staticModal" onclick="get_datas(this.name,this.id)"
+                                                    style="border-radius: 3px;">
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+                                            {% endif %}
 
                                         </div>
                                     </td>
