--- a/ubs/core/templates/core/base.html
+++ b/ubs/core/templates/core/base.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="{% static 'images/logoEmsaudeCerta.png' %}">
-    <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'images/logoEmsaudeCerta.png' %}">
 
     
 
