feat: Title das opções Outros

--- a/ubs/medical_query/templates/CID10/list.html
+++ b/ubs/medical_query/templates/CID10/list.html
@@ -144,7 +144,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/medical_query/delete-CID/" + id_user
+            urlDel = "./delete-CID/" + id_user
 
             let xhr = new XMLHttpRequest()
 
