--- a/ubs/medical_query/templates/exam_request/list.html
+++ b/ubs/medical_query/templates/exam_request/list.html
@@ -144,7 +144,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/medical_query/delete-requisicao-exame/" + id_user
+            urlDel = "./delete-requisicao-exame/" + id_user
 
             let xhr = new XMLHttpRequest()
 
