--- a/ubs/medical_query/templates/medicine/list.html
+++ b/ubs/medical_query/templates/medicine/list.html
@@ -146,7 +146,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/medical_query/delete-medicamento/" + id_user
+            urlDel = "./delete-medicamento/" + id_user
 
             let xhr = new XMLHttpRequest()
 
