tirando o ver todos realizados em encaminhamentos

--- a/ubs/patient/templates/city/add.html
+++ b/ubs/patient/templates/city/add.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Cadastro de Cidadde{% endblock %}
+{% block title %}Cadastro de Cidade{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
