--- a/ubs/patient/templates/city/list.html
+++ b/ubs/patient/templates/city/list.html
@@ -2,7 +2,7 @@
 {% extends 'core/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Listagem de cidade {% endblock %}
+{% block title %} Listagem de Cidade {% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href={% static "vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}>
