--- a/ubs/patient/templates/marital_state/detail.html
+++ b/ubs/patient/templates/marital_state/detail.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Realizar Nova{% endblock %}
+{% block title %}Detalhamento Estado Conjugal{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
