feat: Alterando menssagem para login de usuário

--- a/ubs/accounts/templates/login.html
+++ b/ubs/accounts/templates/login.html
@@ -55,7 +55,7 @@
       
         {% if form.errors %}
         <hr>
-        <div class="alert alert-danger text-center">usuário e ou senha incorretos - <strong>Verifique suas credênciais</strong></div>
+        <div class="alert alert-danger text-center">usuário e/ou senha incorretos - <strong>Verifique suas credenciais</strong></div>
         {% endif %}
     </div>
 </body>
