feat: Title das páginas

--- a/ubs/medical_query/templates/query_has_CID10/add.html
+++ b/ubs/medical_query/templates/query_has_CID10/add.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 
-{% block title %}Cadastro de CID{% endblock %}
+{% block title %}Cadastro de Consulta-CID{% endblock %}
 
 {% block body %}
 
