--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 {% load static %}
 
-{% block title %}Realizar Nova{% endblock %}
+{% block title %}Realizar Nova Consulta{% endblock %}
 
 {% block body %}
 
