--- a/ubs/medical_query/templates/querys/attendances.html
+++ b/ubs/medical_query/templates/querys/attendances.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Listagem de paciente {% endblock %}
+{% block title %} Listagem de Atendimentos {% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href={% static "vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}>
