--- a/ubs/specialty/templates/doctor_specialty/add.html
+++ b/ubs/specialty/templates/doctor_specialty/add.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Adicionar Nova Especialidade{% endblock %}
+{% block title %}Adicionar Médico-Especialidades{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
