--- a/ubs/accounts/templates/users/admin/add.html
+++ b/ubs/accounts/templates/users/admin/add.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Adicionar Novo Usuário{% endblock %}
+{% block title %}Adicionar Novo Usuário Administrador{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
