--- a/ubs/accounts/templates/users/clerk/details.html
+++ b/ubs/accounts/templates/users/clerk/details.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 {% load staticfiles %}
-{% block title %}Adicionar Novo Usuário{% endblock %}
+{% block title %}Adicionar Novo Usuário Técnico{% endblock %}
 
 {% block body %}
 
