--- a/ubs/accounts/templates/users/clerk/edit.html
+++ b/ubs/accounts/templates/users/clerk/edit.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-md-10" style="margin: 20px auto;">
                     <div class="card">
-                        <div class="card-header"><strong>Usuários</strong><small> Editar Usuário Atendente </small>
+                        <div class="card-header"><strong>Usuários</strong><small> Editar Usuário Técnico </small>
                         </div>
 
                         <fieldset>
