--- a/ubs/accounts/templates/users/clerk/list.html
+++ b/ubs/accounts/templates/users/clerk/list.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Listagem de Administradores {% endblock %}
+{% block title %} Listagem de Técnico {% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href={% static "vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}>
