--- a/ubs/accounts/templates/users/doctor/add.html
+++ b/ubs/accounts/templates/users/doctor/add.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Adicionar Novo Usuário{% endblock %}
+{% block title %}Adicionar Novo Usuário Médico{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-md-10" style="margin: 20px auto;">
                     <div class="card">
-                        <div class="card-header"><strong>Usuários</strong><small> Novo Usuário Atendente </small>
+                        <div class="card-header"><strong>Usuários</strong><small> Novo Usuário Médico </small>
                         </div>
 
                         <fieldset>
