--- a/ubs/accounts/templates/users/list.html
+++ b/ubs/accounts/templates/users/list.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Adicionar Novo Usuário{% endblock %}
+{% block title %}Listagem Usuário{% endblock %}
 
 {% block body %}
 
