--- a/ubs/medical_query/templates/query_has_CID10/list.html
+++ b/ubs/medical_query/templates/query_has_CID10/list.html
@@ -2,7 +2,7 @@
 {% extends 'core/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Listagem de CID-consulta {% endblock %}
+{% block title %} Listagem de Consulta-CID {% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href={% static "vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}>
