--- a/ubs/specialty/templates/doctor_specialty/edit.html
+++ b/ubs/specialty/templates/doctor_specialty/edit.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}EditarEspecialidade{% endblock %}
+{% block title %}Editar Médico-Especialidades{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
