views para o medico ver os pacintes registrados

--- a/ubs/core/templates/core/dashboard_medical.html
+++ b/ubs/core/templates/core/dashboard_medical.html
@@ -15,7 +15,7 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <div class="dropdown-menu-content">
-                        <a class="dropdown-item" href="{% url 'patient:list_patient' %}">Meus Pacientes</a>
+                        <a class="dropdown-item" href="{% url 'patient:my_patients' %}">Meus Pacientes</a>
                     </div>
                 </div>
             </div>
