template do medico

--- a/ubs/core/templates/core/dashboard_medical.html
+++ b/ubs/core/templates/core/dashboard_medical.html
@@ -1,7 +1,7 @@
 <div class="col-sm-12">
     <div class="alert  alert-success alert-dismissible fade show" role="alert">
         <span class="badge badge-pill badge-success">Bem Vindo(a)</span> {{request.user}} seu login foi efetuado com
-        sucesso, a partir de agora você pode utilizar todos os recursos do nível <strong>TÉCNICO</strong>.
+        sucesso, a partir de agora você pode utilizar todos os recursos do nível <strong>MÉDICO(A)</strong>.
     </div>
 </div>
 
