--- a/ubs/medical_query/templates/CID10/detail.html
+++ b/ubs/medical_query/templates/CID10/detail.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Realizar Nova{% endblock %}
+{% block title %}Detalhamento CID{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
