--- a/ubs/patient/templates/patient/list_by_doctor.html
+++ b/ubs/patient/templates/patient/list_by_doctor.html
@@ -107,6 +107,13 @@
                                                 </button>
                                             </a>
 
+                                            <a href="{% url 'patient:update_patient' object.id %}">
+                                                <button type="button" class="btn btn-warning btn-sm"
+                                                    style="border-radius: 3px;">
+                                                    <i class="fa fa-edit"></i>
+                                                </button>
+                                            </a>
+
                                             {% if request.user.is_superuser %}
                                                 <a >
                                                     <button type="button" class="btn btn-danger btn-sm" 
