--- a/ubs/medical_query/templates/forwarding/await_querys.html
+++ b/ubs/medical_query/templates/forwarding/await_querys.html
@@ -94,7 +94,7 @@
                                 <tr id="{{object.id}}" style="background-color: rgb(142, 196, 240)  ;">
                                     <td> {{ object.patient}} </td>
                                     <td> 
-                                        {% if object.priority == 'True' %}
+                                        {% if object.priority %}
                                             <strong >Prioritário</strong>
                                         {% else %}
                                             <strong >NÃO</strong> Prioritário
@@ -142,7 +142,7 @@
                                 <tr id="{{object.id}}">
                                     <td> {{ object.patient}} </td>
                                     <td>
-                                        {% if object.priority == 'True' %}
+                                        {% if object.priority %}
                                             <strong >Prioritário</strong >
                                         {% else %}
                                             <strong >NÃO</strong> Prioritário
@@ -221,5 +221,30 @@
 
 
 </script>
+
+
+    <script>
+
+        // Enable pusher logging - don't include this in production
+        Pusher.logToConsole = true;
+
+        var pusher = new Pusher('7c5598615bc9fbb306d2', {
+            cluster: 'us2',
+            forceTLS: true
+        });
+
+        var channel = pusher.subscribe('notification');
+        channel.bind('recieve-notification', function (data) {
+            response = data
+
+            if(response.message == {{request.user.id}}){
+                location.reload()
+            }
+
+        });
+
+
+
+    </script>
 
 {% endblock%}
