--- a/ubs/medical_query/templates/forwarding/current_list.html
+++ b/ubs/medical_query/templates/forwarding/current_list.html
@@ -72,8 +72,24 @@
                             </div>
                         </form>
                     </div>
+
+
+
+                    <div class="col-md-6 row">
+                        <label class="bg-ligth"
+                            style="width: 15px; height: 15px; margin-left: 10px; margin-top: 4px;border: solid 1px gray;"></label><label>
+                            Espera</label>
+                        <label class="bg-info"
+                            style="width: 15px; height: 15px; margin-left: 10px; margin-top: 4px;border: solid 1px gray;"></label><label>
+                            Em atendimento</label>
+                        <label class="bg-success"
+                            style="width: 15px; height: 15px; margin-left: 10px; margin-top: 4px;border: solid 1px gray;"></label><label>
+                            Finalizado</label>
+                    </div>
+
+
                     <div class="card-body">
-                        <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
+                        <table id="bootstrap-data-table-export" class="table  table-bordered">
                             <thead>
                                 <tr>
                                     <th>Paciente</th>
