editando perfil e senha

--- a/ubs/core/templates/core/base.html
+++ b/ubs/core/templates/core/base.html
@@ -89,6 +89,8 @@
                             <a class="nav-link" href="{% if  request.user.is_superuser %} {% url 'accounts:update_admin' request.user.id %} {% elif  request.user.is_medical %} {% url 'accounts:update_doctor' request.user.id %} {% else %} {% url 'accounts:update_clerk' request.user.id %}{% endif %} "><i class="fa fa-user"></i> Meu Perfil</a>
 
                             <a class="nav-link" href="{% url 'accounts:logout'%}"><i class="fa fa-power-off"></i> Sair</a>
+                            <hr>
+                            <a class="nav-link" href="{% url 'accounts:password_change'%}"><i class="fa fa-lock"></i> Mudar Senha </a>
                         </div>
                     </div>
 
