botão de cancelar antendimento

--- a/ubs/medical_query/templates/forwarding/await_querys.html
+++ b/ubs/medical_query/templates/forwarding/await_querys.html
@@ -220,8 +220,20 @@
         });
 
 
+
+
+
 </script>
 
+<script>
+
+        var channel = pusher.subscribe('cancel-query');
+            channel.bind('cancel', function (data) {
+
+            location.reload()
+
+        });
+</script>
 
     <script>
 
