--- a/ubs/medical_query/templates/forwarding/current_list.html
+++ b/ubs/medical_query/templates/forwarding/current_list.html
@@ -185,4 +185,14 @@
 
 </script>
 
+<script>
+
+    var channel = pusher.subscribe('cancel-query');
+    channel.bind('cancel', function (data) {
+
+        location.reload()
+
+    });
+</script>
+
 {% endblock%}
